--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "json2xls": "^0.1.2",
     "lodash": "^4.17.11",
+    "lz-string": "^1.4.4",
     "oracledb": "^3.1.2",
     "rc-pagination": "^1.17.14",
     "react": "^16.8.6",
