--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "algoliasearch": "^3.32.1",
     "axios": "^0.18.0",
+    "axios-cache-adapter": "^2.3.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "json2xls": "^0.1.2",
     "lodash": "^4.17.11",
     "lz-string": "^1.4.4",
+    "node-cache": "^4.2.0",
     "oracledb": "^3.1.2",
     "rc-pagination": "^1.17.14",
     "react": "^16.8.6",
