--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "axios-cache-adapter": "^2.3.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "flat-cache": "^2.0.1",
     "json2xls": "^0.1.2",
     "lodash": "^4.17.11",
     "lz-string": "^1.4.4",
+    "memory-cache": "^0.2.0",
     "node-cache": "^4.2.0",
     "oracledb": "^3.1.2",
     "rc-pagination": "^1.17.14",
