--- a/package.json
+++ b/package.json
@@ -3,30 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "algoliasearch": "^3.32.1",
     "axios": "^0.18.0",
-    "axios-cache-adapter": "^2.3.0",
-    "connect-busboy": "^0.0.2",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-fileupload": "^1.1.4",
-    "flat-cache": "^2.0.1",
-    "json2xls": "^0.1.2",
+    "codemirror": "^5.46.0",
     "lodash": "^4.17.11",
-    "lz-string": "^1.4.4",
-    "memory-cache": "^0.2.0",
-    "node-cache": "^4.2.0",
-    "oracledb": "^3.1.2",
-    "rc-pagination": "^1.17.14",
     "react": "^16.8.6",
+    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.8.6",
     "react-loading": "^2.0.3",
     "react-paginate": "^6.3.0",
-    "react-scripts": "3.0.0",
-    "react-summernote": "^2.0.0"
+    "react-s-alert": "^1.4.1",
+    "react-scripts": "3.0.0"
   },
   "scripts": {
-    "serve": "nodemon server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
