--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-paginate": "^6.3.0",
     "react-s-alert": "^1.4.1",
     "react-scripts": "3.0.0",
+    "react-window": "^1.8.3",
     "recharts": "^1.6.0",
     "sql-formatter": "^2.3.3"
   },
