--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.8.6",
     "react-loading": "^2.0.3",
     "react-paginate": "^6.3.0",
+    "react-router-dom": "^5.0.1",
     "react-s-alert": "^1.4.1",
     "react-scripts": "3.0.0",
     "react-window": "^1.8.3",
